quorum/test/tests/TypeChecker/Pass/TypeInferenceNestedFunctionCalls.quorum
class Main
    action Main
        a = Test(Test(Test(1)))
    end

    action Test(integer i) returns integer
        return i + 1
    end
end