quorum/test/tests/TypeChecker/Fail/ImpAssignBooleanIntegerWrapped.quorum
class main
    action main
        integer i = 5
        boolean b = i
    end
end